--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="refresh" content="0;url=/" />
-  <title>Redirigiendo...</title>
+  <title>App Link</title>
 </head>
 <body>
-  Redirigiendo a la app...
+  Este es un App Link. Si estás viendo esto en el navegador, abrilo desde una app compatible (como Chrome en Android).
 </body>
 </html>
+
